<resources>
    <string name="app_name">Colorado Springs Tour Guide</string>
    <string name="eat">Eat</string>
    <string name="stay">Stay</string>
    <string name="play">Play</string>
    <string name="see">See</string>
    <string name="fourPic">R.drawable.brotherluck</string>
    <string name="fourTitle">Four by Brother Luck</string>
    <string name="fourDesc">Colorado Springs’ famous Chef, Brother Luck, made his name as a restauranteur locally, but worldwide on Bravo’s Top Chef and by Beating Bobby Flay. Four by Brother Luck focuses on southwest cuisine and focuses on the four providers behind his cooking – The Hunter, The Fisherman, The Farmer, and The Gatherer. The menu changes seasonally and uses only locally sourced ingredients.</string>
    <string name="fourHours">11am-10pm</string>
    <string name="fourAddress">321 N Tejon St, Colorado Springs CO</string>
    <string name="fourPhone">(719)434-2741</string>
    <string name="fourWeb">http://www.fourbybrotherluck.com</string>
    <string name="Pic">R.drawable.margarita</string>
    <string name="margTitle">The Margarita at Pine Creek</string>
    <string name="margDesc">Inventive Menus, varied cuisine, and incredible execution. The dining area is beautiful, but the outdoor patio is filled with Edison lights and local musicians during the summer. Come for the food, watch the sunset, and enjoy one of the best the Springs has to offer.</string>
    <string name="margHours">11:30am-8:30pm</string>
    <string name="margAddress">7350 Pine Creek Rd, Colorado Springs, CO</string>
    <string name="margPhone">(719)598-2626</string>
    <string name="margWeb">http://www.margaritaatpinecreek.com</string>
    <string name="pigPic">R.drawable.piglatin</string>
    <string name="pigTitle">Piglatin Cocina</string>
    <string name="pigDesc">Cuban-Korean Fusion. A food truck turned restaurant, the Piglatin Cocina is cheap, delicious street eats everyone can enjoy. “Food for the People” is the motto, and food for the people is incredible.</string>
    <string name="pigHours">11am-Midnight</string>
    <string name="pigAdd">2825 Dublin Blvd, Colorado Springs, CO</string>
    <string name="pigPhone">(719)375-0939</string>
    <string name="pigWeb">http://www.piglatincocina.com/</string>
    <string name="rabbitPic">R.drawable.rabbithole</string>
    <string name="rabbitTitle">Rabbit Hole</string>
    <string name="rabbitDesc">Serving classy comfort food, the Rabbit Hole is literally carved beneath a city and provides some of the most eclectic cuisine available. Paired with yummy drinks, this is a spot that cannot be missed.</string>
    <string name="rabbitHours">4pm-1:30am</string>
    <string name="rabbitAdd">101 N Tejon St, Colorado Springs, CO</string>
    <string name="rabbitPhone">(719)203-5072</string>
    <string name="rabbitWeb">http://www.rabbitholedinner.com/</string>
    <string name="kingPic">R.drawable.kingchef</string>
    <string name="kingTitle">King\'s Chef Diner</string>
    <string name="kingDesc">The building: a purple castle. The Cuisine: extraordinary diner food. This is the place for breakfast in Colorado Springs! Make sure you try the green chilli, a regional delicacy with a spicy bite.</string>
    <string name="kingHours">7am-4pm</string>
    <string name="kingAdd">131 E Bijou Street, Colorado Springs, CO</string>
    <string name="kingPhone">(719)636-5010</string>
    <string name="kingWeb">http://www.cosdiner.com</string>
    <string name="caspPic">R.drawable.caspian</string>
    <string name="caspTitle">Caspian Café</string>
    <string name="caspDesc">The best Mediterranean food in town – Turkish, Greek, and African cuisine all rolled together with the quality of your grandmother’s cooking. The food is all fresh, all delicious, and a Colorado Springs favorite. Be prepared to be treated as family by the owner and staff and watch out for the nightly belly-dancers entertaining the dining area.</string>
    <string name="caspHours">11am-9pm</string>
    <string name="caspAdd">4375 Sinton Rd., Colorado Springs, CO</string>
    <string name="caspPhone">(719)528-1155</string>
    <string name="caspWeb">https://caspiancafe.com/</string>
    <string name="shugasPic">R.drawable.shugas</string>
    <string name="shugasTitle">Shugas</string>
    <string name="shugasDesc">College Bar, great food, wonderful atmosphere. Come for the American cuisine, stay for the drinks and company. This tucked away restaurant is a real treat.</string>
    <string name="shugasHours">11a-Midnight</string>
    <string name="shugasAdd">702 S Cascade Ave, Colorado Springs, CO></string>
    <string name="shugasPhone">(719)328-1412</string>
    <string name="shugasWeb">http://shugas.com/</string>
    <string name="cmzPic">R.drawable.cheyennemountainzoo</string>
    <string name="cmzTitle">Cheyenne Mountain Zoo</string>
    <string name="cmzDesc">Visit America\'s only mountain zoo! Named 6th-best zoo in the nation. Hand-feed giraffes and budgies, experience animals up-close, and witness a view like no other.</string>
    <string name="cmzHours">9am-5pm</string>
    <string name="cmzAdd">4250 Cheyenne Mountain Zoo Road Colorado Springs, CO 80906 </string>
    <string name="cmzPhone">(719)633-2254</string>
    <string name="cmzWeb">http://www.cmzoo.org/</string>
    <string name="rrPic">R.drawable.railroad</string>
    <string name="rrTitle">Cripple Creek and Victor Narrow Gauge Railroad</string>
    <string name="rrDesc">A trip on the Cripple Creek and Victor Narrow Gauge Railroad reveals scenic wonders around every curve as century-old steam locomotive transports you back to the gold mining days of Cripple Creek and Victor, Colorado. A treat for railroad and history buffs, kids and the whole family.</string>
    <string name="rrHours">9:30am-5pm</string>
    <string name="rrAdd">520 E Carr Ave, Cripple Creek, CO</string>
    <string name="rrPhone">(719)689-2640</string>
    <string name="rrWeb">http://cripplecreekrailroad.com/</string>
    <string name="cdPic">R.drawable.cliffdwellings</string>
    <string name="cdTitle">Manitou Cliff Dwellings</string>
    <string name="cdDesc">Explore the fascinating architecture of the ancient Anasazi and browse through two museums featuring cultural displays all overlooking the historic town of Manitou Springs.</string>
    <string name="cdHours">9am-6pm</string>
    <string name="cdAdd">10 Cliff Rd, Manitou Springs, CO 80829</string>
    <string name="cdPhone">(719)685-5242</string>
    <string name="cdWeb">https://www.cliffdwellingsmuseum.com/</string>
    <string name="ghostPic">R.drawable.ghosttown</string>
    <string name="ghostTitle">Ghost Town Museum</string>
    <string name="ghostDesc">Ghost Town Museum serves as a permanent example of Colorado’s Wild West towns. There are many hands-on activities for the young and old: Crank a butter churn. Operate an old-time arcade or nickelodeon. See a short film on the gold mining era. Pan for real gold in the seasonal panning areas! Shop for Colorado gifts, have a picnic, or sip an old-fashioned sarsaparilla. The museum is handicap accessible.</string>
    <string name="ghostHours">9am-6pm</string>
    <string name="ghostAdd">400 S 21st St Colorado Springs, CO 80904</string>
    <string name="ghostPhone">(719)634-0696</string>
    <string name="ghostWeb">http://www.ghosttownmuseum.com</string>
    <string name="rodeoType">Play</string>
    <string name="rodeoPic">R.drawable.ppbrodeo</string>
    <string name="rodeoTitle">Pikes Peak or Bust Rodeo</string>
    <string name="rodeoDesc">The 78th Annual Pikes Peak or Bust Rodeo hosts thirty-two champion cowboys and cowgirls from across the country to compete in seven standard events including bareback, saddle bronc, bull riding, tie-down roping, steer wrestling, team roping, and barrel racing. Pikes Peak or Bust Rodeo has been a Colorado Springs tradition since 1937, showcasing top rodeo talent and action, while providing wholesome entertainment for area residents, as well as visitors to the region. Fans come from far and wide to enjoy top rodeo action and lots of family fun, all while paying tribute to our local military and their families.</string>
    <string name="rodeoVar">July 11-14, 2018</string>
    <string name="rodeoAdd">Norris-Penrose Event Center, Colorado Springs, CO</string>
    <string name="rodeoWeb">http://www.pikespeakorbust.org</string>
    <string name="emmaType">Play</string>
    <string name="emmaPic">R.drawable.emma</string>
    <string name="emmaTitle">Emma Crawford Coffin Races</string>
    <string name="emmaDesc">Legend has it that a young woman named Emma Crawford moved to Manitou Springs in 1889 hopeful that the clean mountain air and healing mineral springs would cure her tuberculosis. After accomplishing a hike up nearby Red Mountain, she let it be known that once she passed on, her wish was to be buried on the mountain. She died soon after and was laid to rest on Red Mountain. Many years later, heavy rainfall caused Emma’s coffin to dislodge, and it came racing down the mountain. The coffin was found by some children, but her remains were never discovered. Emma supposedly still haunts Red Mountain. The yearly coffin races takes a team of five – one “Emma” and four “Mourners” - to push a coffin down the main drag of Manitou Springs, CO dressed in their spookiest costumes. </string>
    <string name="emmaVar">October 27, 2018</string>
    <string name="emmaAdd">Downtown Manitou Springs, CO</string>
    <string name="emmaWeb">https://manitousprings.org/calendar/emma-crawford-coffin-races/</string>
    <string name="iceType">Play</string>
    <string name="icePic">R.drawable.ccicefest</string>
    <string name="iceTitle">Cripple Creek Ice Festival</string>
    <string name="iceDesc">Come watch ice sculptors carve ice into beautiful works of art that will amaze you. 2018 marks the 11th year for this premier event.. Past themes have included a Mythological Wonderland, Story Time, Under the Sea, a Military Salute Carved in Ice, a Rocky Mountain Wonderland, the Old West and a Safari theme.This year’s theme is RENAISSANCE IN ICE!  Come dressed in your best Renaissance attire and join the fun!</string>
    <string name="iceVar"> February 9 - February 18</string>
    <string name="iceAdd">Bennett Ave, Cripple Creek CO</string>
    <string name="iceWeb">https://visitcripplecreek.com/event/ice-fest/</string>
    <string name="ppihcType">Play</string>
    <string name="broadTitle">The Broadmoor</string>
    <string name="broadDesc">Hike through scenic trails and lush valleys. Try your hand at authentic Western adventures from horseback riding and mountain biking, to archery or canoeing on Cheyenne Lake. Stop by Broadmoor Outfitters for expert instruction in fly fishing, rock climbing, falconry and more. Guests seeking a more tranquil retreat can enjoy our resort pools and pampering treatments at the Forbes Travel Guide Five-Star Broadmoor Spa. Our iconic resort is also home to several celebrated restaurants including the only Forbes Five-Star, AAA Five-Diamond restaurant in Colorado, Penrose Room, 54 holes of legendary golf, a world-renowned tennis program, distinctive retail shops, and an array of resort programs for guests of all ages and interests. The Broadmoor also specializes in hosting unforgettable meetings and events within 185,000 square feet of sophisticated function space. From art tours to tennis clinics, geocaching to fitness training, there’s always something new and exciting to discover at “the most unique resort in the world”.</string>
    <string name="broadVar">(855) 634-7711</string>
    <string name="broadAdd">1 Lake Avenue, Colorado Springs, CO 80906</string>
    <string name="broadWeb">https://www.broadmoor.com/</string>
    <string name="call">Call Now</string>
    <string name="directions">Get Directions</string>
    <string name="web">Visit Webiste</string>
    <string name="about">About</string>
</resources>